<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/woodbg" >

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="88dp"
        android:layout_marginTop="76dp"
        android:background="@drawable/lemon"
        android:src="@drawable/dots" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_alignTop="@+id/imageButton1"
        android:layout_centerHorizontal="true"
        android:background="@drawable/soap"
        android:src="@drawable/dots" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/imageButton1"
        android:layout_below="@+id/imageButton1"
        android:layout_marginTop="18dp"
        android:text="@string/acid" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_above="@+id/textView1"
        android:layout_alignParentRight="true"
        android:layout_marginRight="73dp"
        android:background="@drawable/water"
        android:src="@drawable/dots" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignRight="@+id/imageButton2"
        android:text="@string/base" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/imageButton3"
        android:layout_alignRight="@+id/imageButton3"
        android:text="@string/neutral" />

</RelativeLayout>